# RBE501-RL-arm-project

./: .gitignore  .gitmodules  PlotPerformance.py  README.md  directionVSstep.py  evaluate.py  example-inverted-pendulum.py  example-mujoco-so-arm.py  main.py  move-phys-arm.py  plot_3d_trajectories.py  plot_eval_perf_with_mass_scales.py  plot_traj_coord_vs_time.py  plot_trajectory.py  pyproject.toml  train.py  view_env.py
gymnasium_env/: README.md  __init__.py  arm-hw.py  arm.py  arm_hw.py  arm_sim.py  calc_actuator_model.py  so101.xml
gymnasium_env/envs/: __init__.py  arm.py
runs/sac_arm/: events.out.tfevents.1749552428.nbern014-MS-7D40.10531.0
runs/sac_arm/SAC_1/: events.out.tfevents.1749552431.nbern014-MS-7D40.10531.1
tests/: dummy.xml  end_effector_test.py  test_reward.py
